Structure cleanup and detailing
Added new function structure
CReated cleanup script
Changed structure of the project
Added a README
Updated data generation and data insertion scripts

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+#ignore files from s3
 s3/files
 
+#ignore terraform configs
+terraform/.terraform/*
+terraform/*.hcl
+terraform/*.info
+terraform/*.tfstate
+terraform/*.backup
 info.txt
